# traffic-flow-analysis

./: .gitignore  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README_DEMO.md  pyproject.toml  requirements.txt  setup.py  setup_video.py
config/: config.yaml
data/: README.md
examples/: demo_with_synthetic_data.py  simple_analysis.py
models/: README.md
notebooks/: README.md  traffic_analysis_demo.ipynb
src/: __init__.py  traffic_analyzer.py
src/analytics/: __init__.py  traffic_analyzer.py
src/classification/: __init__.py  vehicle_classifier.py
src/detection/: __init__.py  vehicle_detector.py
src/tracking/: __init__.py  vehicle_tracker.py
src/utils/: __init__.py  helpers.py
src/visualization/: __init__.py  traffic_visualizer.py
tests/: test_detection.py  test_tracking.py
