[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "traffic-flow-analysis"
version = "1.0.0"
description = "Traffic Flow Analysis Using CCTV Footage"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Traffic Analysis Team"}
]
keywords = ["computer-vision", "traffic-analysis", "yolo", "object-detection", "vehicle-tracking"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "opencv-python>=4.10.0",
    "numpy>=1.26.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "pandas>=2.2.0",
    "plotly>=5.24.0",
    "ultralytics>=8.3.0",
    "filterpy>=1.4.5",
    "scipy>=1.14.0",
    "Pillow>=10.4.0",
    "scikit-image>=0.24.0",
    "scikit-learn>=1.5.0",
    "tqdm>=4.66.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.1.0",
    "ipywidgets>=8.1.0",
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
traffic-analyze = "src.traffic_analyzer:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
